// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`goto simple 1`] = `
Program {
  "children": Array [
    Goto {
      "kind": "goto",
      "label": Identifier {
        "kind": "identifier",
        "name": "a",
      },
    },
    Echo {
      "expressions": Array [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"Foo\\"",
          "unicode": false,
          "value": "Foo",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`goto simple 2`] = `
Program {
  "children": Array [
    Goto {
      "kind": "goto",
      "label": Identifier {
        "kind": "identifier",
        "name": "longName",
      },
    },
    Echo {
      "expressions": Array [
        String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"Foo\\"",
          "unicode": false,
          "value": "Foo",
        },
      ],
      "kind": "echo",
      "shortForm": false,
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
